# steam-analytics-fabric

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  z.ipynb
docs/: architecture.md  setup.md
docs/architecture/: ADR-001-medallion-architecture.md  ADR-002 for SCD Type 2.md  Context.md
notebooks/fabric/: 00_catalog_discovery.ipynb  00_catalog_refresh.ipynb  00_monitor.ipynb  00_setup_lakehouses.ipynb  01_bronze_ingestion.ipynb  02_silver_transform.ipynb  03_gold_transform.ipynb
src/steam_analytics/: __init__.py  cli.py  config.py  fabric_config.py  logger.py
src/steam_analytics/catalog/: __init__.py  manager.py
src/steam_analytics/ingestion/: orchestrator.py
src/steam_analytics/ingestion/bronze/: __init__.py  onelake_writer.py  schemas.py  writer.py
src/steam_analytics/ingestion/contracts/: __init__.py  steam_player_stats.py  steam_reviews.py  steam_store.py
src/steam_analytics/ingestion/extractors/: __init__.py  app_list.py  base.py  steam_player_stats.py  steam_reviews.py  steam_store.py
src/steam_analytics/ingestion/utils/: __init__.py  rate_limiter.py
src/steam_analytics/transformation/: __init__.py  gold.py  silver.py
tests/fixtures/: steam_player_count_response.json  steam_reviews_response.json  steam_store_response.json
tests/integration/: test_app_list.py  test_extractors.py  test_rate_limiter.py
tests/unit/: test_bronze_schemas.py  test_config.py  test_contracts.py
